--- a/public/sass/vars.scss
+++ b/public/sass/vars.scss
@@ -24,7 +24,7 @@ $action-blue:#0084ff;
 $action-blue-hover:#007AEB;
 
 $action-green:#30C880;
-$action-green-hover:#30C880;
+$action-green-hover:#29C27E;
 
 $action-red:#fc5140;
 $action-red-hover:#fc5140;
