--- a/public/css/style.css
+++ b/public/css/style.css
@@ -630,6 +630,7 @@
           color: #a1a1a1; }
 
 .message-list li {
+  cursor: pointer;
   padding: 20px 0;
   border-bottom: 1px solid #ddd; }
   .message-list li .user-avatar {
