--- a/public/css/lion.css
+++ b/public/css/lion.css
@@ -1205,6 +1205,7 @@ footer {
           color: #a1a1a1; }
 
 .message-list li {
+  cursor: pointer;
   padding: 20px 0;
   border-bottom: 1px solid #ddd; }
   .message-list li .user-avatar {
