--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -688,6 +688,7 @@
                 margin-left:10px;
             }
         }
+        cursor:pointer;
         padding:20px 0;
         border-bottom:1px solid #ddd;
     }
