--- a/public/sass/nav.scss
+++ b/public/sass/nav.scss
@@ -35,6 +35,7 @@ $menu-width:30px;
     .search-form{
         position:relative;
         .fa-search{
+            cursor:pointer;
             position:absolute; 
             right:39%;
             color:#000;
