--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -29,6 +29,9 @@
     width:280px;
     padding:10px;
     float:left;
+    h3,h4{
+        margin-bottom:10px; 
+    }
     .side-mod{
         margin-bottom:20px;
     }
@@ -142,9 +145,6 @@
     }
 }
 .last-reply-list{
-    h3{
-        margin-bottom:10px;
-    }
     ul{
         li{
             a{
@@ -195,6 +195,9 @@
         }
     }
     .topic-content{
+        margin:20px 0;
+        font-size:14px;
+        color:#333;
         img{
             max-width:100%;
             &.canzoom{
@@ -203,8 +206,6 @@
                 cursor:zoom-in;
             }
         }
-        margin:20px 0;
-        font-size:14px;
         ul {
             list-style-type: disc;
             list-style-position: inside;
@@ -297,7 +298,7 @@
         background:$action-blue;
         color:#fff;
         border:none;
-        @include border-radius(5px);
+        @include border-radius(3px);
         &:hover{
             background:$action-blue-hover;
         }
@@ -356,6 +357,12 @@
             margin-left:2%;
             vertical-align:middle;
             color:#ccc;
+        }
+        .rcontent{
+            color:#333; 
+        }
+        .rrdesc{
+            color:#999; 
         }
     }
     .reply-meta{
@@ -511,6 +518,7 @@
         }
         label{
             width:60px;
+            border:none;
         }
         input[type=text],input[type=password]{
             @include border-radius(2px);
@@ -520,9 +528,10 @@
             height:32px;
         }
         .wyurl{
+            padding-left:65px;
             margin:10px 0;
         }
-        button[type=submit],.up-trigger{
+        button[type=submit]{
             margin:10px 0;
             padding:10px 20px;
             border:none;
@@ -530,12 +539,17 @@
             background:$action-blue;
             color:#fff;
             text-align:center;
-        }
-        button[type=submit]:hover{
-            background:$action-blue-hover;
+            &:hover{
+                background:$action-blue-hover;
+            }
+            &.ml{
+                margin-left:62px; 
+            }
         }
         .up-trigger{
+            border:none;
             padding:0px;
+            margin-bottom:10px;
             background:none;
             color:$action-green;
             outline:0;
@@ -688,9 +702,11 @@
                 margin-left:10px;
             }
         }
-        cursor:pointer;
         padding:20px 0;
         border-bottom:1px solid #ddd;
+        &.godetail{
+            cursor:pointer; 
+        }
     }
 }
 #new-message-form{
@@ -758,42 +774,110 @@
     @include border-radius(5px);
 }
 .user-wrapper{
-    margin-top:-20px;
-    .user-hd{
+    position:relative;
+    margin-top:-49px;
+    overflow:hidden;
+    .user-top-bg{
+        position:relative;
+        z-index:1;
         width:100%;
-        height:420px;
-        .userbg{
-            z-index:1;
-            height:420px;
-            overflow:hidden;
-            position: absolute;
-            left: 0;
-            right: 0;
-            top: 50px;
-            margin:auto 0;
-            img{
-                width:100%;
+        height:300px;
+        img.user-avatar{
+            z-index:10;
+            position:absolute;
+            left:83px;
+            bottom:-60px;
+            width:128px;
+            height:128px;
+            @include border-radius(5px);
+            border:5px solid #fff 
+        }
+    }
+    .user-main{
+        position:relative;
+    }
+    .user-detail{
+        position:absolute;
+        left:0;
+        top:10px;
+        z-index:10;
+        width:300px;
+        overflow:hidden;
+        padding-bottom:10px;
+        z-index:99;
+        text-align:center;
+        h1{
+            font-size:24px;
+        }
+        .focus{
+            @include clearfix();
+            margin:0 auto;
+            width:250px;
+            padding:15px 0;
+            margin-top:15px;
+            border-top:1px solid #ddd;
+            border-bottom:1px solid #ddd;
+            dl{
+                float:left; 
+                width:101px;
+                margin: 0 12px;
+                cursor:pointer;
+                dt,dd{
+                    margin:0;
+                    color:#333;
+                    font-size:16px;
+                    font-weight:bold;
+                    text-align:center; 
+                }
             }
         }
     }
-    .user-detail{
-        border-bottom:1px solid #ddd;
-        padding-bottom:20px;
-        margin-bottom:20px;
-        position:relative;
-        z-index:99;
-        text-align:center;
-        img.user-avatar{
-            background:#fff;
-            padding:5px;
-            margin-top:-64px;
+    .user-bar{
+        @include clearfix();
+        height:50px; 
+        line-height:50px;
+        padding-left:310px;
+        font-size:16px;
+        .action{
+            color:$action-green; 
+            a{
+                font-size:14px;
+                margin-left:10px;
+                color:#999;
+                border:1px solid #999;
+                padding:5px 10px;
+                @include border-radius(3px);
+                &:hover{
+                    color:#fff; 
+                    background:#999;
+                }
+            }
+            float:right;
+            #add-relation{
+                color:$action-green;
+                border:1px solid $action-green;
+                &:hover{
+                    color:#fff;
+                    background:$action-green;
+                }
+            }
         }
     }
     .user-topics,.user-replys,.car-list{
-        width:300px;
+        margin-left:300px;
+        width:680px;
         padding:10px;
         float:left;
+        a{
+            color:#333; 
+            &:hover{
+                text-decoration:underline;
+            }
+        }
         h2{
+            color:#111;
+            padding-left:10px;
+            border-left:5px solid $action-red;
             .fa{
                 width:5px;
                 margin-right:5px;
