--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -46,7 +46,8 @@ ul, ol {
 .fa {
   min-width: 16px;
   font-size: 14px;
-  margin-right: 5px; }
+  margin-right: 5px;
+  vertical-align: middle; }
 
 .date {
   color: #ccc; }
