--- a/public/sass/nav.scss
+++ b/public/sass/nav.scss
@@ -92,6 +92,7 @@ $menu-width:30px;
                 width:32px;
                 height:32px;
                 margin-right:10px;
+                background:#fff;
                 @include border-radius(3px);
             }
         }
