--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -102,6 +102,7 @@
         width: 32px;
         height: 32px;
         margin-right: 10px;
+        background: #fff;
         -webkit-border-radius: 3px;
         -moz-border-radius: 3px;
         -ms-border-radius: 3px;
