--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,6 +110,7 @@
       width: 10%;
       float: left; }
       .topic-list li .author-avatar img {
+        background: #fff;
         width: 48px;
         height: 48px;
         -webkit-border-radius: 5px;
@@ -146,6 +147,9 @@
   .last-reply-list ul li .lastreply-avatar {
     margin-right: 10px; }
     .last-reply-list ul li .lastreply-avatar img {
+      background: #fff;
+      width: 48px;
+      height: 48px;
       -webkit-border-radius: 5px;
       -moz-border-radius: 5px;
       -ms-border-radius: 5px;
@@ -161,6 +165,9 @@
   font-size: 18px;
   margin-bottom: 10px; }
   .topic-main h1 .user-avatar img {
+    background: #fff;
+    width: 48px;
+    height: 48px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
@@ -501,13 +508,22 @@
   .settings form button[type=submit].ml {
     margin-left: 62px; }
 .settings form .up-trigger {
+  height: 30px;
+  line-height: 30px;
   border: none;
-  padding: 0px;
+  padding: 0px 10px;
   margin-bottom: 10px;
-  background: none;
-  color: #30c880;
+  background: #30c880;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+  color: #fff;
   outline: 0;
   display: block; }
+  .settings form .up-trigger .fa {
+    font-size: 16px; }
 .settings #showurl {
   color: #cc181e; }
 
@@ -708,9 +724,8 @@
     background-color: #f2dede;
     border-color: #ebccd1; }
 
-#show-avatar, #current-avatar {
-  width: 128px;
-  height: 128px;
+.user-avatar {
+  background: #fff;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
@@ -817,7 +832,7 @@
     .user-wrapper .user-topics a, .user-wrapper .user-replys a, .user-wrapper .car-list a {
       color: #333; }
       .user-wrapper .user-topics a:hover, .user-wrapper .user-replys a:hover, .user-wrapper .car-list a:hover {
-        text-decoration: underline; }
+        color: #fc5140; }
     .user-wrapper .user-topics h2, .user-wrapper .user-replys h2, .user-wrapper .car-list h2 {
       color: #111;
       padding-left: 10px;
