--- a/public/css/lion.css
+++ b/public/css/lion.css
@@ -929,6 +929,8 @@ footer {
     .reply-list .reply-main .rcontent, .hot-reply-list .reply-main .rcontent {
       color: #333; }
     .reply-list .reply-main .rrdesc, .hot-reply-list .reply-main .rrdesc {
+      border-left: 5px solid #ccc;
+      padding-left: 5px;
       color: #ccc; }
   .reply-list .reply-meta, .hot-reply-list .reply-meta {
     margin-left: 90px; }
@@ -1023,6 +1025,10 @@ footer {
     border-radius: 3px; }
     .reg-form .act button:hover, .login-form .act button:hover {
       background: #007aeb; }
+  .reg-form .act .goregister, .login-form .act .goregister {
+    position: absolute;
+    top: 30px;
+    right: 40px; }
   .reg-form .loading, .login-form .loading {
     position: absolute;
     left: 50px;
